--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Ahorcado</title>
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- Latest CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-	<!-- My custom stylesheet -->
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -24,9 +22,9 @@
 				<hr>
 				<h3>You've won <span id="total-score">0</span> games so far!</h3>
 			</div>
-			<div id="guesses-remaining-box" class="stats">
+			<div id="left-guesses-box" class="stats">
 				<hr>
-				<h3>You have <span id="guesses-remaining">6</span> incorrect guesses left before you lose.</h3>
+				<h3>You have <span id="left-guesses">5</span> incorrect guesses left before you lose.</h3>
 			</div>
 			<div id="playboard">
 				<img src="assets/images/hm0.png">
